[gd_scene load_steps=20 format=4 uid="uid://cbgdxrplsyfe7"]

[ext_resource type="Texture2D" uid="uid://buhwjltmrbhig" path="res://Assets/caverntileset.png" id="1_crb3f"]
[ext_resource type="Script" path="res://Scripts/shop_test.gd" id="1_w0ihx"]
[ext_resource type="Script" path="res://Scripts/Inventory/craft_recipe.gd" id="2_ms1n7"]
[ext_resource type="Resource" uid="uid://dtpss46r7q57b" path="res://Data/Recipes/lesser_glow_recipe.tres" id="3_7jywx"]
[ext_resource type="Texture2D" uid="uid://baykpetcclc4p" path="res://Assets/shop_counter.png" id="3_jlxhr"]
[ext_resource type="Resource" uid="uid://drqxtuyj46emi" path="res://Data/Recipes/lesser_magic_recipe.tres" id="4_iksas"]
[ext_resource type="Resource" uid="uid://cq8abvcihm4v0" path="res://Data/Recipes/lesser_bouncing_recipe.tres" id="5_yqheb"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="8_4vwxw"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="9_c13vn"]
[ext_resource type="Resource" uid="uid://b30kmgqmlxbv0" path="res://Data/Dialogue/potion_selling.tres" id="9_uj1ur"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="10_cuduw"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="11_qf24y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_itxrb"]
texture = ExtResource("1_crb3f")
texture_region_size = Vector2i(32, 32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/next_alternative_id = 4
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/1 = 1
6:0/1/flip_v = true
6:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/2 = 2
6:0/2/transpose = true
6:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/3 = 3
6:0/3/flip_h = true
6:0/3/transpose = true
6:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
23:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.5, -1, 16, -16, 16, 16, -16, 16)
24:0/0 = 0
24:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 0.25, 0, 16, 16, -16, 16)
25:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
31:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
32:0/0 = 0
32:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
33:0/0 = 0
33:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
34:0/0 = 0
34:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
35:0/0 = 0
36:0/0 = 0
36:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
37:0/0 = 0
38:0/0 = 0
38:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
26:0/0 = 0
27:0/0 = 0
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_vrokg"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_itxrb")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sovkc"]
size = Vector2(6, 82)

[sub_resource type="RichTextEffect" id="RichTextEffect_mn204"]
script = ExtResource("9_c13vn")

[sub_resource type="RichTextEffect" id="RichTextEffect_46y26"]
script = ExtResource("10_cuduw")

[sub_resource type="RichTextEffect" id="RichTextEffect_07mf2"]
script = ExtResource("11_qf24y")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbjlj"]
size = Vector2(20, 120)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_w0ihx")
available_potions = Array[ExtResource("2_ms1n7")]([ExtResource("3_7jywx"), ExtResource("4_iksas"), ExtResource("5_yqheb")])

[node name="TileMap" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray("AAALAA4AAAAJAAAAAAAMAA4AAAAJAAAAAAANAA4AAAAJAAAAAAAOAA4AAAAJAAAAAAAPAA4AAAAJAAAAAAAQAA4AAAAJAAAAAAARAA4AAAAJAAAAAAASAA4AAAAJAAAAAAATAA4AAAAJAAAAAAAUAA4AAAAJAAAAAAAVAA4AAAAJAAAAAAAWAA4AAAAJAAAAAAAXAA4AAAAJAAAAAAAYAA4AAAAJAAAAAAAZAA4AAAAJAAAAAAAaAA4AAAAJAAAAAAAbAA4AAAAJAAAAAAAcAA4AAAAJAAAAAAAdAA4AAAAJAAAAAAAeAA4AAAAJAAAAAAAfAA4AAAAJAAAAAAAKAA4AAAAJAAAAAAAJAA4AAAAJAAAAAAAIAA4AAAAJAAAAAAAHAA4AAAAJAAAAAAAGAA4AAAAJAAAAAAAFAA4AAAAJAAAAAAAEAA4AAAAJAAAAAAAgAA4AAAAJAAAAAAAhAA4AAAAJAAAAAAAiAA4AAAAJAAAAAAAjAA4AAAAJAAAAAAAkAA4AAAAJAAAAAAAgAAsAAAAhAAAAAAAhAAsAAAAiAAAAAAAlAA4AAAAJAAAAAAAmAA4AAAAJAAAAAAAnAA4AAAAJAAAAAAAoAA4AAAAJAAAAAAApAA4AAAAJAAAAAAAqAA4AAAAJAAAAAAArAA4AAAAJAAAAAAAsAA4AAAAJAAAAAAAtAA4AAAAJAAAAAAAuAA4AAAAJAAAAAAAvAA4AAAAJAAAAAAAwAA4AAAAJAAAAAAA=")
tile_set = SubResource("TileSet_vrokg")

[node name="ShopCounter" type="Sprite2D" parent="."]
position = Vector2(831, 432)
texture = ExtResource("3_jlxhr")

[node name="DialogueArea" type="Area2D" parent="."]
position = Vector2(841, 424)
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueArea"]
shape = SubResource("RectangleShape2D_sovkc")

[node name="CustomerSpawn" type="Node2D" parent="."]
position = Vector2(1239, 412)

[node name="DialogueBox" type="Panel" parent="."]
visible = false
offset_left = 314.0
offset_top = 371.0
offset_right = 1022.0
offset_bottom = 620.0
script = ExtResource("8_4vwxw")
data = ExtResource("9_uj1ur")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_mn204"), SubResource("RichTextEffect_46y26"), SubResource("RichTextEffect_07mf2")])

[node name="DespawnArea" type="Area2D" parent="."]
position = Vector2(1500, 420)
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnArea"]
shape = SubResource("RectangleShape2D_pbjlj")

[connection signal="body_entered" from="DialogueArea" to="." method="_on_dialogue_area_body_entered"]
[connection signal="dialogue_signal" from="DialogueBox" to="." method="_on_dialogue_signal"]
[connection signal="body_entered" from="DespawnArea" to="." method="_on_despawn_area_body_entered"]
